# Software_Eng2025

./: .bash_history  .gitignore  CMakeLists.txt  Dockerfile  README.md  cmd.txt  hello_2025.cpp
.github/workflows/: cmake-single-platform.yml
cmake/: HelloProjConfig.h.in
mains/: CMakeLists.txt  hello_2025.cpp
src/basic/: CMakeLists.txt  message.cpp
tests/: CMakeLists.txt  test-hello.cpp  test-version.cpp
